--- a/style.css
+++ b/style.css
@@ -1,45 +1,40 @@
 /* Global Styles */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-@font-face {
-    font-family: 'Ruhl';
-    src: url('./fonts/FrankRuhlLibre-Regular.ttf')
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @font-face {
-    font-family: 'Ruhl Medium';
-    src: url('./fonts/FrankRuhlLibre-Medium.ttf')
+  font-family: "Ruhl";
+  src: url("./fonts/FrankRuhlLibre-Regular.ttf");
 }
-
 
 @font-face {
-    font-family: 'Vibes';
-    src: url('./fonts/GreatVibes-Regular.ttf')
+  font-family: "Ruhl Medium";
+  src: url("./fonts/FrankRuhlLibre-Medium.ttf");
 }
 
-
-html {
-    font-size: 62.5%;
-    --header1: calc(2rem + 1vw);
-    --header2: calc(3.5rem + 1vw);
-    --header3: calc(3rem + 1vw);
-    --header4: calc(2.4rem + 1vw);
-    --text: calc(1.5rem + 1vw);
-    --big: calc(2.4rem + 1vw);
-    --special-color: #906272;
-    --background-color: #414141;
-    --gray-text: #525252;
-
+@font-face {
+  font-family: "Vibes";
+  src: url("./fonts/GreatVibes-Regular.ttf");
+}
+Ruhl html {
+  font-size: 62.5%;
+  --header1: calc(2rem + 1vw);
+  --header2: calc(3.5rem + 1vw);
+  --header3: calc(3rem + 1vw);
+  --header4: calc(2.4rem + 1vw);
+  --text: calc(1.5rem + 1vw);
+  --big: calc(2.4rem + 1vw);
+  --special-color: #906272;
+  --background-color: #414141;
+  --gray-text: #525252;
 }
 
 h1 {
-    font-size: var(--header1);
+  font-size: var(--header1);
 }
 
 li,
@@ -47,34 +42,34 @@ button,
 label,
 input,
 p {
-    font-size: var(--text);
+  font-size: var(--text);
 }
 
 h2 {
-    font-size: var(--header2);
+  font-size: var(--header2);
 }
 
 h3 {
-    font-size: var(--header3);
-    font-weight: normal;
+  font-size: var(--header3);
+  font-weight: normal;
 }
 
 h4,
 h5 {
-    font-size: var(--header4);
+  font-size: var(--header4);
 }
 
 .flex {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
